--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TrybeVirtualMenu</string>
-    <string name="main_title_text">Cardápio Online</string>
+    <string name="main_menu">Cardápio Online</string>
     <string name="back">Voltar</string>
     <string name="detail_text">Detalhe do Prato</string>
 </resources>
